codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_chatgpt_pool_unavailable_members.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                                      │
│                                                                                │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date                  │
│ information on rate limits and credits                                         │
│                                                                                │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto)          │
│  Directory: [[workspace]]                                                      │
│  Permissions:      Custom (custom permissions with network access, on-request) │
│  Agents.md:        <none>                                                      │
│  Account:          codex-pro pool (2 members, 2 unavailable)                   │
│                    active: no active member                                    │
│                                                                                │
│  Context window:   100% left (750 used / 272K)                                 │
│  Limits:           data not available yet                                      │
╰────────────────────────────────────────────────────────────────────────────────╯
